--- a/HTML/Imagenes y enlaces.html
+++ b/HTML/Imagenes y enlaces.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div style="text-align: center">
-        <a href="https://developer.mozilla.org/es/docs/Web/HTML"><img src="imagenes/css.png" alt="HTML" height="250"></a>
-        <a href="https://developer.mozilla.org/es/docs/Web/CSS"><img src="imagenes/html.png" alt="CSS" height="250"></a>
+        <a href="https://developer.mozilla.org/es/docs/Web/HTML"><img src="imagenes/html.png" alt="HTML" height="250"></a>
+        <a href="https://developer.mozilla.org/es/docs/Web/CSS"><img src="imagenes/css.png" alt="CSS" height="250"></a>
     </div>
     <br/><br/><br/><br/>
     <div style="text-align: center">
